--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,4 +7,21 @@ init:
 build: false
 
 test_script:
-- ps: Import-Module PSTestWinibleZ; Test-AnsibleRole
+#- ps: Import-Module PSTestWinibleZ; Test-AnsibleRole
+- ps: |
+    $url = "https://ci.appveyor.com/api/buildjobs/56mtxp7lybfpgoj9/artifacts/pstestwiniblez.zip"
+    $repo_path = "C:\PSTestWinibleZ"
+    $download_path = Join-Path -Path $repo_path -ChildPath PSTestWinibleZ.zip
+
+    if (Test-Path -Path $repo_path) {
+        Remove-Item -Path $repo_path -Force -Recurse > $null
+    }
+    New-Item -Path $repo_path -ItemType Directory > $null
+    Invoke-WebRequest -Uri $url -OutFile $download_path
+
+    Add-Type -AssemblyName System.IO.Compression.FileSystem > $null
+    [System.IO.Compression.ZipFile]::ExtractToDirectory($download_path, $repo_path)
+
+    Import-Module -Name $repo_path
+    $res = Test-AnsibleRole
+    exit ([int](-not $res))
