--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,23 +3,8 @@ image: Visual Studio 2017
 init:
 - ps: Get-PackageProvider -Name NuGet -ForceBootstrap > $null
 - ps: Install-Module -Name PSTestWinibleZ -Force
-- ps: |
-    $url = "https://ci.appveyor.com/api/buildjobs/p13bfr78gjc73pnq/artifacts/pstestwiniblez.zip"
-    $repo_path = "C:\PSTestWinibleZ"
-    $download_path = Join-Path -Path $repo_path -ChildPath PSTestWinibleZ.zip
-
-    if (Test-Path -Path $repo_path) {
-        Remove-Item -Path $repo_path -Force -Recurse > $null
-    }
-    New-Item -Path $repo_path -ItemType Directory > $null
-    Invoke-WebRequest -Uri $url -OutFile $download_path
-
-    Add-Type -AssemblyName System.IO.Compression.FileSystem > $null
-    [System.IO.Compression.ZipFile]::ExtractToDirectory($download_path, $repo_path)
-
 
 build: false
 
 test_script:
-#- ps: Import-Module PSTestWinibleZ; Test-AnsibleRole
-- cmd: powershell.exe "Import-Module -Name powershell-yaml; Import-Module -Name psake; Import-Module -Name 'C:\PSTestWinibleZ'; if (Test-AnsibleRole) { exit 0 } else { exit 1}
+- cmd: powershell.exe "Import-Module -Name PSTestWinibleZ; $res = Test-AnsibleRole; exit ([int](-not $res))"
