Added badge, change meta role name, fix up 2.4 issues

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,14 +1,19 @@
 ---
 galaxy_info:
+  role_name: win-chocolatey-server
   author: Jordan Borean
   description: Install Chocolatey Server on Windows role
-  company: Red Hat
   license: MIT
   min_ansible_version: 2.4
   platforms:
   - name: Windows
     versions:
     - Server 2016
+    - Server 2012 R2
+    - Server 2012
+    - Server 2008 R2
   galaxy_tags:
   - windows
+  - packaging
+  - chocolatey
 dependencies: []
