--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -43,8 +43,10 @@
 
 - name: install IIS server features
   win_feature:
-    name: '{{ pri_chocolatey_server_features }}'
+    name: '{{ item }}'
     state: present
+  # prefer to use list in name but this does not work in Ansible 2.4, change this once 2.4 is out of support
+  with_items: '{{ pri_chocolatey_server_features }}'
   register: pri_chocolatey_server_install
 
 # bug in Server 2008 R2, need to re-register ASP.NET so IIS can detect it
