--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,9 @@
 image: Visual Studio 2017
 
+# Skip on updates to the readme.
+skip_commits:
+message: /updated readme.*|update readme.*s/
+
 services:
 - iis
 
